@@ -38,6 +38,9 @@
 <p>2014-02-06  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/{ps.c, ps2.c, ps3.c, pdf.c}: Only use resolution from
+image or -density if units was properly specified.  Without units,
+resolution is worthless.</li>
 <li>coders/ps3.c (WritePS3Image): Use image resolution similar to PDF
 changes.</li>
 <li>coders/ps2.c (WritePS2Image): Use image resolution similar to PDF
